change background color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <style>
             html {
                 box-sizing: border-box;
-                background: #ffc600;
+                background: #fff;
                 font-family: 'helvetica neue';
                 font-size: 20px;
                 font-weight: 200;
@@ -30,7 +30,7 @@
             }
 
             .panel {
-                background: #6B0F9C;
+                background: #fff;
                 box-shadow: inset 0 0 0 5px rgba (255,255,255,0.1);
                 color: white;
                 text-align: center;
